--- a/www/css/index.css
+++ b/www/css/index.css
@@ -1,16 +1,75 @@
+html,
 body {
-    background-color:#EEEEEE;
-    font-family:monospace;
+    height:100%;
+}
+
+body {
+    background-image: linear-gradient(top, #A7A7A7 0%, #E4E4E4 51%);
+    background-image: -o-linear-gradient(top, #A7A7A7 0%, #E4E4E4 51%);
+    background-image: -moz-linear-gradient(top, #A7A7A7 0%, #E4E4E4 51%);
+    background-image: -webkit-linear-gradient(top, #A7A7A7 0%, #E4E4E4 51%);
+    background-image: -ms-linear-gradient(top, #A7A7A7 0%, #E4E4E4 51%);
+    background-image: -webkit-gradient(
+        linear,
+        left top,
+        left bottom,
+        color-stop(0, #A7A7A7),
+        color-stop(0.51, #E4E4E4)
+    );
+}
+
+body,
+h1 {
+    font-family:'HelveticaNeue-Light', 'HelveticaNeue', Helvetica, Arial, sans-serif;
     font-size:1em;
+    font-weight:300;
+    text-transform:uppercase;
+}
+
+.logo {
+    background:url(../img/cordova.png) center center no-repeat;
+    background-size:contain;
+    height:500px;
+    margin:0px auto;
+    margin-bottom:-50px;
+    width:426px;
+    max-width:100%;
 }
 
 h1 {
-    background:url(../img/cordova.png) center center no-repeat;
-    background-size:contain;
-    height:200px;
-    width:100%;
+    font-size:2em;
+    margin:0px;
+    text-align:center;
 }
 
-p {
+.report {
+    background-color:#333333;
+    -webkit-border-radius:4px;
+    -moz-border-radius:4px;
+    border-radius:4px;
+    color:#FFFFFF;
+    display:block;
+    font-size:0.8em;
+    margin:5px auto;
+    padding:2px 4px;
     text-align:center;
+    width:200px;
+}
+
+.report-on {
+    background-color:#4B946A;
+}
+
+.hide {
+    display:none;
+}
+
+@-webkit-keyframes fade {
+    from { opacity: 1.0; }
+    50% { opacity: 0.4; }
+    to { opacity: 1.0; }
+}
+ 
+.blink {
+    -webkit-animation:fade 3000ms infinite;
 }
