--- a/www/css/index.css
+++ b/www/css/index.css
@@ -26,14 +26,21 @@ body {
     vertical-align:middle;
 }
 
-h1 {
+.app {
     background-image:url(../img/cordova-small.png);
     background-repeat:no-repeat;
+    margin:0px auto;
+    padding-left:210px;
+    width:275px;
+}
+
+h1 {
     font-size:2em;
     font-weight:300;
     margin:0px;
     overflow:visible;
     padding:0px;
+    text-align:center;
 }
 
 .status {
@@ -69,32 +76,19 @@ h1 {
 
 /* portrait */
 @media screen and (max-aspect-ratio: 1/1) {
-    h1 {
+    .app {
         background-position:center top;
+        height:100px; /* adds enough room for text */
         padding:225px 0px 0px 0px;
-        text-align:center;
     }
 }
 
 /* lanscape */
 @media screen and (min-aspect-ratio: 1/1) {
-    h1,
-    div {
-        padding-left:220px;
-    }
-
-    h1 {
+    .app {
         background-position:left center;
-        margin-bottom:-100px;
-        margin-top:-100px;
-        padding-top:100px;
-        padding-bottom:100px;
-        text-align:left;
-    }
-
-    .status {
-        margin-left:0px;
-        margin-right:0px;
+        height:165px;     /* height + padding = background image size */
+        padding-top:80px;
     }
 }
 
