--- a/www/css/index.css
+++ b/www/css/index.css
@@ -64,6 +64,12 @@ h1 {
     display:none;
 }
 
+@keyframes fade {
+    from { opacity: 1.0; }
+    50% { opacity: 0.4; }
+    to { opacity: 1.0; }
+}
+ 
 @-webkit-keyframes fade {
     from { opacity: 1.0; }
     50% { opacity: 0.4; }
@@ -71,6 +77,7 @@ h1 {
 }
  
 .blink {
+    animation:fade 3000ms infinite;
     -webkit-animation:fade 3000ms infinite;
 }
 
