[app] Remove unused Cordova logo.

--- a/www/css/index.css
+++ b/www/css/index.css
@@ -28,7 +28,7 @@ body {
 }
 
 .app {
-    background-image:url(../img/cordova-small.png);
+    background-image:url(../img/cordova.png);
     background-repeat:no-repeat;
     margin:0px auto;
     width:275px;
