--- a/www/index.css
+++ b/www/index.css
@@ -1,11 +1,8 @@
-* {
-    -webkit-tap-highlight-color: rgba(0,0,0,0);
-}
- 
 body {
     -webkit-touch-callout: none;
     -webkit-text-size-adjust: none;
     -webkit-user-select: none;
+    -webkit-tap-highlight-color: rgba(0,0,0,0);
     font-family:'HelveticaNeue-Light', 'HelveticaNeue', Helvetica, Arial, sans-serif;
     font-size:12px;
     height:100%;
@@ -30,7 +27,7 @@ body {
  
 /* Landscape layout (with min-width) */
 @media screen and (min-aspect-ratio: 1/1) and (min-width:400px) {
-    .app {
+    #app {
         background-position:left center;
         padding:75px 0px 75px 170px;
         margin:-90px 0px 0px -198px;
