GH-41: Add support for dark mode to the template

--- a/template_src/www/css/index.css
+++ b/template_src/www/css/index.css
@@ -108,3 +108,10 @@ h1 {
     animation:fade 3000ms infinite;
     -webkit-animation:fade 3000ms infinite;
 }
+
+
+@media screen and (prefers-color-scheme: dark) {
+    body {
+        background-image:linear-gradient(to bottom, #585858 0%, #1B1B1B 51%);
+    }
+}
